<resources>
    <string name="app_name">Snaccman</string>
    <string name="anc">ANC</string>
    <string name="looters">Looters</string>
    <string name="others">Others</string>
    <string name="menu">MENU</string>
    <string name="app_info">App Info</string>
    <string name="info_about_app_here">Info about app here</string>
    <string name="info_about_creators_here">Info about creators here</string>
    <string name="creators">Creators</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="parathas">Parathas</string>
    <string name="south_indian">South Indian</string>
    <string name="sandwiches">Sandwiches</string>
    <string name="maggi">Maggi</string>
    <string name="snacks">Snacks</string>
    <string name="chinese">Chinese</string>
    <string name="indian">Indian</string>
    <string name="tandoor">Tandoor</string>
    <string name="beverages">Beverages</string>
    <string name="burgers">Burgers</string>
    <string name="hot_items">Hot Items</string>
    <string name="mojito">Mojito</string>
    <string name="pizzas">Pizzas</string>
    <string name="shakes">Shakes</string>
    <string name="subs">Subs</string>
    <string name="wraps">Wraps</string>
    <string name="add">Add</string>
    <string name="item_name">Item Name</string>
    <string name="_0">0</string>
    <string name="price">price</string>
    <string name="qty">qty</string>
    <string name="sub_category">Sub Category</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="total_amount_here">Total: *amount here</string>
    <string name="counter_number">Counter Number</string>

</resources>
