<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/borders"
    android:padding="8dp"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    tools:context=".activity.PopUpLooters">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.Guideline
            android:id="@+id/gl1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.0909090909" />

        <android.support.constraint.Guideline
            android:id="@+id/gl2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1818181818" />

        <android.support.constraint.Guideline
            android:id="@+id/gl3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2727272727" />

        <android.support.constraint.Guideline
            android:id="@+id/gl4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3636363636" />

        <android.support.constraint.Guideline
            android:id="@+id/gl5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.454545454545" />

        <android.support.constraint.Guideline
            android:id="@+id/gl6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5454545454" />

        <android.support.constraint.Guideline
            android:id="@+id/gl7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6363636363" />

        <android.support.constraint.Guideline
            android:id="@+id/gl8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7272727272" />

        <android.support.constraint.Guideline
            android:id="@+id/gl9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8181818181" />

        <android.support.constraint.Guideline
            android:id="@+id/gl10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9090909090" />

        <android.support.constraint.Guideline
            android:id="@+id/gl11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="1.00000" />

        <Button
            android:id="@+id/button_burgers"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/borders"
            android:text="@string/burgers"
            app:layout_constraintBottom_toTopOf="@+id/gl2"
            app:layout_constraintTop_toTopOf="@+id/gl1" />

        <Button
            android:id="@+id/button_chinese_loot"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/borders"
            android:text="@string/chinese"
            app:layout_constraintBottom_toTopOf="@+id/gl3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/gl2" />

        <Button
            android:id="@+id/button_hotItem"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/borders"
            android:text="@string/hot_items"
            app:layout_constraintBottom_toTopOf="@+id/gl4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/gl3" />

        <Button
            android:id="@+id/button_mojito"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/borders"
            android:text="@string/mojito"
            app:layout_constraintBottom_toTopOf="@+id/gl5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/gl4" />

        <Button
            android:id="@+id/button_pizza"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/borders"
            android:text="@string/pizzas"
            app:layout_constraintBottom_toTopOf="@+id/gl6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/gl5" />

        <Button
            android:id="@+id/button_sandwich"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/borders"
            android:text="@string/sandwiches"
            app:layout_constraintBottom_toTopOf="@+id/gl7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/gl6" />

        <Button
            android:id="@+id/button_shakes"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/borders"
            android:text="@string/shakes"
            app:layout_constraintBottom_toTopOf="@+id/gl8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/gl7"
            />

        <Button
            android:id="@+id/button_subs"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/borders"
            android:text="@string/subs"
            app:layout_constraintBottom_toTopOf="@+id/gl9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/gl8" />

        <Button
            android:id="@+id/button_wraps"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/borders"
            android:text="@string/wraps"
            app:layout_constraintBottom_toTopOf="@+id/gl10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/gl9" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>